# CNN_tabletennis

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  classifier.ipynb  landing.txt  log.txt  plot.ipynb  regression.ipynb  struct_output.ipynb
.ipynb_checkpoints/: classifier-checkpoint.ipynb  regression-checkpoint.ipynb
lib/cut_roi_layer/: bbox_transform_inv_layer.py  bbox_transform_layer.py  iou_layer.py  (+1 more)
models/: classifier.prototxt  classifier_deploy.prototxt  classifier_solver.prototxt  classifier_vgg.prototxt  classifier_vgg_deploy.prototxt  classifier_vgg_solver.prototxt  deploy.prototxt  deploy.prototxt.old  end2end.prototxt  end2end_deploy_vgg.prototxt  end2end_hardmine_solver.prototxt  end2end_regression.prototxt  end2end_regression_deploy.prototxt  end2end_regression_deploy_vgg.prototxt  end2end_regression_solver.prototxt  end2end_regression_solver_vgg.prototxt  end2end_regression_vgg.prototxt  end2end_solver.prototxt  end2end_solver_vgg.prototxt  end2end_vgg.prototxt  regression.prototxt  regression_deploy.prototxt  regression_solver.prototxt  sodlt.prototxt  sodlt_deploy.prototxt  sodlt_solver.prototxt  sodlt_vgg.prototxt  sodlt_vgg_deploy.prototxt  sodlt_vgg_solver.prototxt  solver.prototxt  train_val.prototxt  train_val.prototxt.old
scripts/: create_dataset.sh  create_dataset_regress.sh  create_dataset_sodlt.sh  gen_label.py  gen_py_mean.py  test.py  train.py  train.sh
src/: CMakeLists.txt  Classifier.cpp  Classifier.h  NNTracker.cpp  main.cpp  main.h  tracker_test.cpp  tracker_vis.cpp
src/include/: Classifier.h  NNTracker.h  main.h
